styles.css
html, body {
    width: 100vw;
    height: 100vh;
    overflow-x: hidden;
}
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    /* Font Styles */
    font-family: "Inter", sans-serif;
    font-optical-sizing: auto;
    font-weight: 450;
    font-style: normal;
}

/* Navigation Bar */
header {
    height: 10%;
    width: 100vw;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 2.6rem 5% 0rem 5rem; 
    flex-wrap: wrap; 
    box-sizing: border-box;
    position: fixed;
    background-color: transparent;
    z-index: 1000;
}
.logo a {
    font-size: 1.3vw;
    text-decoration: none;
    font-weight: 600;
    color: #000;
}
nav {
    display: flex;
    justify-content: flex-end;
    overflow: hidden; 
}
nav ul {
    display: flex;
    list-style: none;
    gap: 1.5rem; 
    justify-content: flex-end;
    flex-wrap: wrap;
    padding: 0;
    margin: 0;
}
nav ul li {
    white-space: nowrap;
}
nav ul li a {
    text-decoration: none;
    color: #000;
    padding: 0.5rem 0.8rem;
    font-size: 1vw;
    transition: background-color 0.4s, color 0.4s;
}
nav ul li a:hover {
    /* background-image: linear-gradient(-225deg, #7742B2 0%, #F180FF 52%, #FD8BD9 100%);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent; */
    color: #CB9DF0;
}

/* Section */
section {
    /* background-color: #CB9DF0; */
    width: 100vw;
    display: flex;
    flex-direction: row;
    justify-content: center;
}
.midpart {
    margin-top: 5%;
    /* background-color:aquamarine; */
    width: 50%;
    height: 90%;
}

/* Introduction Section */
.introduction {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* background-color: brown; */
    
}
.intro-left {
    display: flex;
    flex-direction: column;
    flex: 7;
    padding-top: 17vh;
}
.intro-left h1 {
    font-size: 1.45vw;
    font-weight: 550;
    line-height: 150%;
    white-space: nowrap;
}
.intro-gradient {
    background-image: linear-gradient(225deg,#DE97F9, #9157FF);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    font-weight: 600;
}
.intro-left #intro-h2-1 {
    font-size: 1vw;
    font-weight: 400;
    padding-top: 5%;
    white-space: nowrap;
}
.intro-left #intro-h2-2 {
    font-size: 1vw;
    font-weight: 400;
    padding-top: 1vh;
    white-space: nowrap;
}
.intro-right {
    display: flex;
    flex-direction: column;
    flex: 3;
    justify-content: center;
    align-items: center; 
}
.intro-right img {
    width: 100%;
    height: 15vw;
    max-height: 20vw;
    object-fit: cover; 
    margin-top: 11vh;
}

/* Projects Section */
.projects {
    display: flex;
    flex-direction: column;
    /* background-color: #FFCCEA; */
    padding-top: 10%;
}
.pro-heading {
    font-size: 1.6vw;
    font-weight: 550;
    white-space: nowrap;
}
.project-list { 
    display: flex; 
    flex-wrap: wrap; 
    gap: 1.5%; 
    justify-content: space-between;
    /* background-color: #BFECFF; */
}
.project-card { 
    background-color: #f3f3f3;
    border-radius: 15px;
    border: 1px solid black;
    box-shadow: 0px 4px 24px 1px rgba(0, 0, 0, 0.1);
    margin-top: 3%;
    height: 26vw;
    width: 48.5%;
    display: flex;
    flex-direction: column;
    overflow: hidden;
    transition: 0.3s;
}
.project-link {
    text-decoration: none;
}
.project-card img { 
    width: 94%;
    margin-left: 3%;
    margin-top: 2.5%;
    object-fit: cover;
}
.project-name {
    font-size: 1.4vw;
    font-weight: 610;
    color: #000;
    margin: 1% auto auto 3%;
}
.project-subtitle {
    font-size: 1.2vw;
    font-weight: 500;
    color: #000;
    margin: 1% auto auto 3%;
}
.project-description {
    font-size: 0.9vw;
    font-weight: 400;
    color: #737373;
    margin: 1% auto 3% 3%;
    line-height: 1.4;
}
.project-card:hover {
    transform: translate(0, -10px);
}
.project-link:focus,
.project-link:hover {
    outline: none;
}


/* Experiences & Achievements Section */

